# erp-metalfort

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/lib/: auth.py  jinja_filters.py  repository.py  supabase.py
backend/app/models/: estoque.py  formula.py  quote.py
backend/app/routers/: admin_combos.py  combos.py  compra.py  estoque.py  fornecedor.py  material.py  produto.py  public_quote.py  quote.py
backend/app/services/: bom_engine.py  combo_service.py  configuracao_normalizer.py  email_sender.py  estoque.py  pdf_generator.py  personalizados.py  quote_calculator.py  quote_finalize.py  storage.py  variables.py
backend/app/templates/: email_cliente.html  email_metalfort.html  quote_pdf.html
backend/scripts/: import_planilha_samuel.py
backend/tests/: test_bom_engine.py  test_combo_service.py  test_combos_api.py  test_configuracao_normalizer.py  test_email_sender.py  test_estoque_api.py  test_estoque_service.py  test_models_estoque.py  test_pdf_generator.py  test_quote_calculator.py  test_variables.py
database/tests/: formula-fixtures.json  variables-fixtures.json
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
frontend/e2e/: estoque-flow.spec.ts  public-flow.spec.ts  step-configurator.spec.ts
frontend/src/: App.tsx  index.css
supabase/: config.toml  dev-seed-user.sql  seed.sql
supabase/migrations/: 001_schema.sql  002_rls.sql  (+5 more)
(+78 files in other folders)
